# quant-stock-trading

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: config.py
backend/app/backtest/: engine.py  metrics.py  walk_forward.py
backend/app/data/: cache.py  factors.py  fetcher.py  multi.py  universe.py
backend/app/risk/: limits.py  position_sizing.py
backend/app/strategies/: base.py  factors.py  momentum.py  pairs_trading.py
notebooks/: 01_pairs_koPep.ipynb
scripts/: make_report.py  run_backtest.py  run_factor_tilt.py  run_momentum.py
tests/: conftest.py  test_cointegration.py  test_costs.py  test_factors.py  test_momentum.py  test_no_lookahead.py  test_position_sizing.py  test_walk_forward.py
