[project]
name = "quant-stock-trading"
version = "0.1.0"
description = "Personal quant research and paper-trading platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "yfinance>=0.2.40",
    "vectorbt>=0.26",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "pyarrow>=17",
    "sqlalchemy>=2",
    "python-dotenv>=1",
    "tabulate>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "jupyterlab>=4",
    "matplotlib>=3.9",
    "nbformat>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = false
